@@ -115,7 +115,7 @@ AutoIncBuild=1
 MajorVer=1
 MinorVer=2
 Release=0
-Build=11
+Build=12
 Debug=0
 PreRelease=0
 Special=0
@@ -126,7 +126,7 @@ CodePage=1252
 [Version Info Keys]
 CompanyName=
 FileDescription=KBL-Visualizer
-FileVersion=1.2.0.11
+FileVersion=1.2.0.12
 InternalName=KBLVisualizer
 LegalCopyright=(c)2004 by Markus Birth <mbirth@webwriters.de>
 LegalTrademarks=
